@@ -1270,6 +1270,13 @@ The message will wrap to fit the window, or may be many lines by
 putting <tt>\n</tt> characters into it. The enter key is a
 shortcut for the OK button.
 
+<P>A message text can be further formatted with html tags by 
+adding <tt>&lt;html&gt;</tt> at the beginning of the message.
+See <tt><a href="Fl_Help_View.html">Fl_Help_View</a></tt> for
+details.
+
+<P>The message text is limited to 1024 characters.
+
 <P ALIGN="CENTER"><IMG src="fl_message.gif" ALT="The fl_message window.">
 
 
